# CtrlV-backend

./: README.md  build.sh  manage.py  pyproject.toml
analytics/: serializers.py  urls.py  views.py
codely/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
snippets/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
snippets/management/commands/: analyze_telemetry.py  cleanup_telemetry.py  create_superuser.py  generate_snippets.py  generate_views.py
snippets/migrations/: 0001_initial.py  0002_snippetmetrics.py  0003_snippet_parent_snippet_snippet_password_hash_and_more.py  0003_vscodeextensionmetrics.py  0004_vscodetelemetryevent.py  0005_snippetdiff_delete_vscodeextensionmetrics_and_more.py  0006_vscodeextensionmetrics_vscodetelemetryevent.py  0007_alter_snippet_creator_ip_hash_and_more.py  0008_snippet_encryption_salt_alter_snippet_password_salt.py  0009_remove_snippet_encryption_salt_snippet_is_public_and_more.py  0010_snippet_consumed_at_snippet_is_consumed.py  0011_fixed_migration.py  0012_remove_snippet_encryption_salt_and_more.py
